# MeshPlotter

./: .gitignore  CMakeLists.txt  README.md
forms/: mainwindow.ui
libs/include/: geometry_utils.h
libs/src/: geometry_utils.cpp
src/: elementtablemodel.cpp  elementtablemodel.h  mainwindow.cpp  mainwindow.h  meshdata.cpp  meshdata.h  nodetablemodel.cpp  nodetablemodel.h  plotter3d.cpp  plotter3d.h
